--- a/styles/home.css
+++ b/styles/home.css
@@ -7,12 +7,12 @@
 .image img{
     height: 300px;
     border-radius: 50%;
-    border: 5px solid white;
+    border: 5px solid black;
     transition: all .3s ease 0s;
 }
 
 .image img:hover{
-    border: 5px solid rgb(0, 0, 0);
+    border: 5px solid orange;
 }
 
 .intro div{
@@ -21,12 +21,12 @@
 
 
 .welcome-title {
-    font-size: 30px;
+    font-size: 50px;
     letter-spacing: .15em;
     font-weight: bold;
 }
 .welcome-subtitle {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .welcome-text {
@@ -41,6 +41,12 @@ button {
     height: 40px;
 }
 
-.resume-button {
+.resume-button, .contact-button{
     background-color: rgb(160, 201, 13);
+    font-size: 20px;
+    height: 50px;
+}
+
+.contact-button {
+    background-color: orange;
 }
