--- a/styles/nav.css
+++ b/styles/nav.css
@@ -14,6 +14,8 @@ header {
     justify-content: flex-end;
     align-items: center;
     height: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .logo {
